Fix commit hash on aside overflows horizontally
https://tangled.org/pocka.jp/legit/issues/11

--- a/embed/static/global.css
+++ b/embed/static/global.css
@@ -314,6 +314,8 @@ body {
 	margin: 0;
 	font-size: var(--font-md);
 	margin-block-end: var(--space-xl);
+
+	overflow-x: auto;
 }
 
 .tab-selector {
